--- a/routines/tutorial_island/06_quest_guide.yaml
+++ b/routines/tutorial_island/06_quest_guide.yaml
@@ -12,117 +12,121 @@ name: "Tutorial Island - Quest Guide"
 type: tutorial
 phase: 6
 
-# Key NPCs
-npcs:
-  quest_guide:
-    name: "Quest Guide"
-    id: 3312
-    location: {x: 3086, y: 3120, plane: 0}
-
-# Key Locations
-locations:
-  building_entrance:
-    door: {x: 3086, y: 3126, plane: 0}
-    notes: "Door to enter Quest Guide building"
-  ladder:
-    location: {x: 3088, y: 3119, plane: 0}
-    action: "Climb-down"
-    notes: "Ladder in Quest Guide building - leads to mining section"
-
-# Key Widgets - VALIDATED
-widgets:
-  continue_button: 12648448      # Action: "Continue"
-  quest_tab: 35913794            # Action: "Quest List"
-
 steps:
-  # NAVIGATION FROM COOKING - VALIDATED PATH
-  # From the CORRECT cooking exit door at (3072, 3090), navigation works!
-
   - id: 1
     description: "Walk to Quest Guide building area"
     action: GOTO
     args: "3086 3110 0"
-    validated: true
     notes: "From cooking exit (3072, 3090), walk toward Quest Guide"
 
   - id: 2
     description: "Walk to Quest Guide building door"
     action: GOTO
     args: "3086 3126 0"
-    validated: true
+    delay_before_ms: 3000
 
   - id: 3
     description: "Open Quest Guide building door"
     action: INTERACT_OBJECT
     args: "Door Open"
-    location: {x: 3086, y: 3126}
-    validated: true
+    delay_before_ms: 2000
 
   - id: 4
     description: "Talk to Quest Guide"
     action: INTERACT_NPC
     args: "Quest_Guide Talk-to"
-    await_condition: "dialogue"
-    validated: true
+    delay_before_ms: 2000
 
   - id: 5
-    description: "Click through dialogue"
-    action: CLICK_CONTINUE
-    repeat_until: "no_dialogue"
-    notes: "Quest Guide tells you to open quest list"
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 2000
 
   - id: 6
-    description: "Open Quest Journal tab"
-    action: CLICK_WIDGET
-    args: '35913794 "Quest List"'
-    validated: true
-    notes: |
-      CRITICAL DISCOVERY: Tutorial Island quest tab widget!
-      - Widget ID: 35913794 = (548 << 16) | 66
-      - Action: "Quest List"
-      - Use find_widget(text="Quest") to verify widget is available
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
 
   - id: 7
-    description: "Talk to Quest Guide again"
-    action: INTERACT_NPC
-    args: "Quest_Guide Talk-to"
-    await_condition: "dialogue"
-    validated: true
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
 
   - id: 8
-    description: "Click through dialogue"
-    action: CLICK_CONTINUE
-    repeat_until: "no_dialogue"
-    notes: "Quest Guide explains how quest journal works"
+    description: "Open Quest Journal tab"
+    action: CLICK_WIDGET
+    args: "35913794"
+    delay_before_ms: 1000
+    notes: |
+      Widget ID: 35913794 = (548 << 16) | 66
+      CLICK_WIDGET only takes widget ID, not action strings
 
   - id: 9
+    description: "Click Quest Guide dialogue option"
+    action: CLICK_WIDGET
+    args: "15138820"
+    delay_before_ms: 2000
+    notes: |
+      CRITICAL: After opening Quest tab, a dialogue appears with options:
+      - "Quest Guide" (widget 15138820)
+      - "Click here to continue"
+      Must click "Quest Guide" option to proceed.
+
+  - id: 10
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
+
+  - id: 11
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
+
+  - id: 12
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
+
+  - id: 13
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
+
+  - id: 14
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
+
+  - id: 15
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
+
+  - id: 16
     description: "Climb down ladder to mining section"
     action: INTERACT_OBJECT
     args: "Ladder Climb-down"
-    location: {x: 3088, y: 3119}
-    validated: true
+    delay_before_ms: 1000
     notes: |
-      Leads to underground mining tutorial area.
-      After climbing down, player is at y~9520 (underground coordinates).
+      Ladder leads to underground mining tutorial area.
 
 # PITFALLS DISCOVERED:
-# 1. Navigation works IF you exit cooking via CORRECT door at (3072, 3090)
-#    - The wrong door at (3079, 3084) leads to a maze area
-#    - See 05_cooking.yaml for details
-#
-# 2. Quest tab widget on Tutorial Island:
-#    - TAB_OPEN quest command FAILS (widget 548,0x52 not visible)
-#    - SOLUTION: Use CLICK_WIDGET 35913794 "Quest List"
-#    - This widget is specific to Tutorial Island interface
-#
-# 3. find_widget(text="Quest") works after opening quest panel
-#    - Returns widget IDs for quest list items
-#    - Useful for verifying interface state
+# 1. CLICK_WIDGET only takes widget ID - not action strings
+# 2. CLICK_CONTINUE doesn't exist - use KEY_PRESS Space
+# 3. await_condition and repeat_until cause timeouts - removed
+# 4. CRITICAL: After opening Quest tab, a dialogue with options appears:
+#    - Must click "Quest Guide" option (widget 15138820) NOT "Click here to continue"
+#    - Only after completing this dialogue does the ladder become usable
+#    - Check tutorial hint (widget group 263) to verify progress
 
-# VALIDATED COMMANDS:
-# - GOTO 3086 3110 0              # Navigate toward Quest Guide
-# - GOTO 3086 3126 0              # Navigate to door
-# - INTERACT_OBJECT Door Open     # Open building door
-# - INTERACT_NPC Quest_Guide Talk-to
-# - CLICK_WIDGET 35913794 "Quest List"  # Open quest tab (Tutorial Island specific!)
-# - CLICK_CONTINUE                # Progress through dialogue
+# After this routine:
+# Player in underground area, ready for 07_mining_smithing.yaml
