--- a/routines/tutorial_island/03_survival_expert.yaml
+++ b/routines/tutorial_island/03_survival_expert.yaml
@@ -1,5 +1,5 @@
 # Tutorial Island - Part 3: Survival Expert (Fishing & Skills)
-# STATUS: VALIDATED
+# STATUS: IN PROGRESS
 #
 # This routine handles the Survival Expert section:
 # 1. Talk to Survival Expert
@@ -37,46 +37,58 @@ steps:
     description: "Talk to Survival Expert"
     action: INTERACT_NPC
     args: "Survival_Expert Talk-to"
-    await_condition: "dialogue"
 
   - id: 2
-    description: "Click through dialogue"
-    action: CLICK_WIDGET
-    args: '12648448 "Continue"'
-    repeat_until: "no_dialogue"
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 2000
 
   - id: 3
-    description: "Open inventory tab"
-    action: CLICK_WIDGET
-    args: '35913795 "Inventory"'
-    notes: "Tutorial says 'click the flashing backpack icon'"
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
 
   - id: 4
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
+
+  - id: 5
+    description: "Open inventory tab"
+    action: CLICK_WIDGET
+    args: "35913795"
+    delay_before_ms: 1000
+    notes: "Tutorial says 'click the flashing backpack icon'"
+
+  - id: 6
     description: "Fish shrimp - click fishing spot"
     action: INTERACT_NPC
     args: "Fishing_spot Net"
-    await_condition: "has_item:Raw shrimps"
+    delay_before_ms: 1000
     notes: |
       CRITICAL: Tutorial Island fishing spots use action "Net" not "Small Net"!
       This is different from main game fishing spots.
-      Found by: QUERY_NPCS which now includes NPC actions after code update.
 
-  - id: 5
-    description: "Click continue after catching shrimp"
-    action: CLICK_WIDGET
-    args: '12648448 "Continue"'
+  - id: 7
+    description: "Wait for fishing to complete and continue dialogue"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 5000
 
-  - id: 6
+  - id: 8
+    description: "Continue dialogue (space)"
+    action: KEY_PRESS
+    args: "Space"
+    delay_before_ms: 1000
+
+  - id: 9
     description: "Open skills tab"
     action: CLICK_WIDGET
     args: "10485808"
-    validated: true
-    notes: |
-      CRITICAL DISCOVERY: Tutorial Island skills tab widget!
-      - Widget ID: 10485808 (group 160, child 0 or 48)
-      - Position: x=570, y=167
-      - This is DIFFERENT from main game (35913809 does NOT work)
-      - TAB_OPEN skills command also fails on Tutorial Island
+    delay_before_ms: 1000
 
 # KEY PRINCIPLE:
 # ALWAYS use widget IDs from this file or widget_reference.yaml
@@ -91,9 +103,9 @@ steps:
 # 3. Tutorial Island uses different widget groups than main game
 #    - Skills tab: 10485808 (group 160) NOT 35913809 (group 548)
 #    - Quest tab: 35913794 (group 548, child 66) - see 06_quest_guide.yaml
+# 4. CLICK_WIDGET only takes widget ID - not action strings!
+#    - Use KEY_PRESS Space for dialogue continue instead
 
-# VALIDATED COMMANDS:
-# - CLICK_WIDGET 35913795 "Inventory"  # Opens inventory
-# - INTERACT_NPC Fishing_spot Net      # Fish shrimp
-# - CLICK_WIDGET 12648448 "Continue"   # Click continue in dialogue
-# - CLICK_WIDGET 10485808              # Opens skills tab (Tutorial Island specific!)
+# After this routine:
+# Player should have fished shrimp, opened skills tab
+# Ready for 04_woodcutting_firemaking.yaml
